--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=/home/eternali/Android/Sdk
-flutter.sdk=/opt/flutter
+flutter.sdk=/home/eternali/applications/flutter
 flutter.versionName=0.0.1
