--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: custom_radio
-description: A new flutter package project.
+description: An animatable radio button that can be customized to the max.
 version: 0.0.1
 author: Conrad Heidebrecht
 homepage: https://github.com/eternali/custom_radio
