added pubs recommendations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: custom_radio
 description: An animatable radio button that can be customized to the max.
 version: 0.1.0
-author: Conrad Heidebrecht
+author: Conrad Heidebrecht <conrad.heidebrecht@gmail.com>
 homepage: https://github.com/eternali/custom_radio
 
 environment:
